--- a/index.html
+++ b/index.html
@@ -47,10 +47,20 @@
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
                   <li class="bg-dark list-group-item" >
-                    <button id="filter-btn" type="button" class="btn btn-dark">
-                        Filter Table
-                    </button>
-                    
+                    <label for="city">Enter a City</label>
+                    <input type="text" placeholder="roswell" id="city" class="form-control"/>
+                  </li>
+                  <li class="bg-dark list-group-item" >
+                    <label for="state">Enter a State</label>
+                    <input type="text" placeholder="ca" id="state" class="form-control"/>
+                  </li>
+                  <li class="bg-dark list-group-item" >
+                    <label for="country">Enter a Country</label>
+                    <input type="text" placeholder="us" id="country" class="form-control" />
+                  </li>
+                  <li class="bg-dark list-group-item" >
+                    <label for="shape">Enter a Shape</label>
+                    <input type="text" placeholder="circle" id="shape" class="form-control" />
                   </li>
                 </ul>
                
